<resources>
    <string name="app_name">ProyectoRecPM</string>
    <string name="txt_register">Registro</string>
    <string name="txt_Email">Correo</string>
    <string name="txt_pasword">Contraseña</string>
    <string name="btn_text_Login">Inicia Sesion</string>
    <string name="btn_text_register">Siguiente</string>
    <string name="txt_Login">Login</string>
    <string name="txt_intruduceEmail">Introduce Email</string>
    <string name="txt_introduce_pass">Introduce Contraseña</string>
    <string name="txtbtn_Login">IniciarSesion</string>
    <string name="imgbtn_home" />
    <string name="imgbtn_search" />
    <string name="imgbtn_notificacion" />
    <string name="imgbtn_user" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_home">Inicio</string>
    <string name="txt_notifications">Notificaciones</string>
    <string name="btn_notification_1">notification1</string>
    <string name="btn_notification_2">Notification2</string>
    <string name="frg_search_title">Buscador</string>
    <string name="frg_title_user">Usuario</string>
    <string name="User_name">Nombre usuario</string>
    <string name="txt_username">Nombre usuario</string>
    <string name="text_email">Email</string>
    <string name="frg_user_btn_edit">Editar Usuario</string>
    <string name="txt_notacount">No tienes cuenta registrate?</string>
    <string name="btn_register">Registrate</string>
    <string name="btn_notificacion3">Notificacion3</string>
    <string name="btn_notificacion4">Notificacion4</string>
    <string name="txt_welcome">Bienvenida</string>
    <string name="Img_user" />
    <string name="imgn_home" />
    <string name="btnLogout">Cerrar sesion</string>
    <string name="txt_contentDescription" />
    <string name="txtRpass">Repite contraseña</string>
    <string name="error_profile_not_exist">Usuario no existe</string>
    <string name="sharedpreferences_file">ficheroConfiguracion</string>
    <string name="txt_phone">Telefono</string>
    <string name="txtDireccion">Direccion</string>
    <string name="txt_btn_recuperar">Mostrar</string>
    <string name="txt_haveAcount">Tienes una cuenta?</string>
    <string name="btn_registrarse">Restrarse</string>
    <string name="error_pass_empty">Contraseña Requerida</string>
    <string name="error_email_empty">Correo Requerido</string>
    <string name="error_confirm_not_equals">Contraseñas no coinciden</string>
    <string name="error_user_empty">Nombre requerido</string>
    <string name="error_singin">Erro al inciar sesion</string>
    <string name="request_save_profile_ok">Perfil guardado</string>
</resources>