<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Color_BackGrounds"
    tools:context=".login.LoginActivity">

    <LinearLayout

        android:id="@+id/act_login_lnlayoutV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".login.LoginActivity">

        <!-- TextView for heading -->
        <TextView
            android:id="@+id/act_login_txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Colortext"
            android:text="@string/txt_Login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/ColorTextBtn"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Edit text for email -->

        <!-- Edit text for password -->
        <EditText
            android:id="@+id/act_login_editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_intruduceEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/Color_text" />

        <EditText
            android:id="@+id/act_login_editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/txt_introduce_pass"
            android:inputType="textPassword"
            android:textColor="@color/Color_text" />

        <!-- Button for Login with text "Login" -->
        <Button
            android:id="@+id/btn_login_act_login_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtbtn_Login" />

        <!-- ProgressBar for Loading Time -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>