<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frg_notifications_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alejandroQuindimil.recuperacionprogramacionmultimedia.main.NotificationsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/frg_home_text_lnlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/frg_notifications_text_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/Colortext"
            android:text="@string/txt_notifications"
            android:textColor="@color/ColorTextBtn"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frg_notifications_lnlayout_butons"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="94dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/frg_notif_notify1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_notification_1" />

        <Button
            android:id="@+id/frg_notif_notify2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_notification_2" />

    </LinearLayout>

</FrameLayout>